# nimbus

./: .env.example  .gitignore  DAY8_NEXT_STEPS.md  GITHUB_SETUP_GUIDE.md  README.md  pyproject.toml
scratch/: inspect_graph_type.py
scripts/: download_datasets.py  generate_synthetic.py  run_battery_standalone.py  run_pipeline.py  stress_test.py  verify_providers.py
src/automl_agents/: cli.py  llm_client.py  mcp_server.py  schemas.py
src/automl_agents/graph/: pipeline.py
src/automl_agents/nodes/: __init__.py  prep.py  profiler.py  reporter.py  selector.py  supervisor.py  trainer.py
src/automl_agents/tools/: __init__.py  training.py
temp_test2/: synthetic_ground_truth.csv  synthetic_ground_truth.meta.json
tests/: conftest.py  test_agent_decisions.py  test_cli.py  test_day7.py  test_escape_hatch.py  test_mcp_server.py  test_mlflow_logging.py  test_model_export.py  test_pipeline.py  test_preprocessor.py  test_profiler.py  test_retry_path.py  test_schemas.py  test_selection.py  test_setup.py  test_training.py
