[project]
name = "multiagent-automl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feature-engine>=1.9.4",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "tenacity>=9.1.4",
    "typer>=0.26.8",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/automl_agents"]
