[project]
name = "multiagent-automl"
version = "0.2.0"
description = "Multi-agent AutoML pipeline — CSV in, report + trained model out."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feature-engine>=1.9.4",
    "joblib>=1.5.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mcp>=1.0.0",
    "mlflow>=3.14.0",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=13.0.0",
    "scikit-learn>=1.9.0",
    "tenacity>=9.1.4",
    "typer>=0.26.8",
    "xgboost>=3.3.0",
]

[project.scripts]
nimbus = "automl_agents.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/automl_agents"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
filterwarnings = [
    # joblib's numpy_pickle.py sets array.shape directly, which NumPy 2.5
    # deprecated.  This is a third-party issue — suppress until joblib ships
    # a fix.  Ref: https://github.com/joblib/joblib/issues/1619
    "ignore:Setting the shape on a NumPy array:DeprecationWarning",
]

[tool.pyright]
extraPaths = ["src", "."]
typeCheckingMode = "basic"
reportAttributeAccessIssue = "warning"
reportArgumentType = "warning"
reportOperatorIssue = "warning"
reportIndexIssue = "warning"
reportReturnType = "warning"
reportCallIssue = "warning"
reportMissingImports = "warning"
reportPrivateImportUsage = "none"

